Update: Added notification features and updated user-related services and components